--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^2.20.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.7",
     "pug": "^3.0.2",
     "square": "^9.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^2.20.1"
   }
 }
